<resources>
    <string name="app_name">TripPlanner</string>
    <string name="str_name">Name</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_date">Date</string>
    <string name="str_time">Time</string>
    <string name="str_note">Note</string>
    <string name="str_start">Start</string>
    <string name="str_save">Save</string>
    <string name="str_tripname">Trip Name</string>
    <string name="str_done">Done</string>
</resources>
